syntax = "proto3";

option go_package = "github.com/edgeca-org/edgeca/grpc";

package edgeca;

// The CA service definition.
service CA {
  rpc RequestPolicy (PolicyRequest) returns (PolicyReply) {}
  rpc GenerateCertificate (CertificateRequest) returns (CertificateReply) {} 

}


message PolicyReply {
  string policy = 1;
	string defaultOrganization = 2;
  string defaultOrganizationalUnit = 3;
	string defaultProvince = 4;
	string defaultLocality = 5;
	string defaultCountry = 6;
}

message CertificateRequest {
  string csr = 1;
  string authToken = 2;
}

message CertificateReply {
  string certificate = 1;
  string privateKey = 2;
}

message PolicyRequest {} 

